# IMUDynamicPositioning

./: CMakeLists.txt  README.md  main.cpp
include/: BLtoNE.h  CrossProduct.h  EulerAnglesCalculator.h  IMUDataReader.h  Magnitude.h  MatrixToEuler.h  Plotter.h  Updating.h
src/: BLtoNE.cpp  CMakeLists.txt  CrossProduct.cpp  EulerAnglesCalculator.cpp  IMUDataReader.cpp  Magnitude.cpp  MatrixToEuler.cpp  Plotter.cpp  Updating.cpp
