add_library(EulerAnglesCalculator EulerAnglesCalculator.cpp)
add_library(IMUDataReader IMUDataReader.cpp)
add_library(Plotter Plotter.cpp)
add_library(Updating Updating.cpp)
add_library(CrossProduct CrossProduct.cpp)
add_library(MatrixToEuler MatrixToEuler.cpp)
add_library(Magnitude Magnitude.cpp)
add_library(BLtoNE BLtoNE.cpp)

target_include_directories(EulerAnglesCalculator PUBLIC ../include)
target_include_directories(IMUDataReader PUBLIC ../include)
target_include_directories(Plotter PUBLIC ../include)
target_include_directories(Updating PUBLIC ../include)
target_include_directories(CrossProduct PUBLIC ../include)
target_include_directories(MatrixToEuler PUBLIC ../include)
target_include_directories(Magnitude PUBLIC ../include)
target_include_directories(BLtoNE PUBLIC ../include)
